--- a/resources.html
+++ b/resources.html
@@ -18,6 +18,7 @@
                     <li><a href="modules.html">模块介绍</a></li>
                     <li><a href="cases.html">实践案例</a></li>
                     <li><a href="resources.html" class="active">资源中心</a></li>
+                    <li><a href="docs.html">文档中心</a></li>
                     <li><a href="about.html">关于我们</a></li>
                 </ul>
             </nav>
